<resources>
    <string name="app_name">Quiz App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quizzy">QUIZZY</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="publish_quiz">Publish Quiz</string>
    <string name="emptyString"> </string>
    <string-array name="subjects">
        <item>Biology</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>History</item>
    </string-array>

    <string name="start_now">Start Now!</string>
    <string name="attempted_quizzes">Attempted Quizzes</string>
    <string name="teacherEmptyAttemptedQuizzes">Your students have not attempted any of your quizzes yet.</string>
    <string name="_310076">310076</string>
    <string name="student_ranks">Student Ranks</string>
    <string name="total_ques">- %1$d Ques</string>
    <string name="quiz_quizId">Quiz ID: %1$s</string>
    <string name="quiz_title">Quiz Title: %1$s</string>
    <string name="quiz_subject">Subject: %1$s</string>
    <string name="quizTeacherName">Teacher Name: %1$s</string>
    <string name="quiz_total_ques">Total questions: %1$s</string>
    <string name="quiz_total_time">Total time: %1$s</string>
    <string name="quiz_date_created">Date Created: %1$s</string>
    <string name="quiz_status_false">Status: Not Attempted</string>
    <string name="quiz_status_true">Status: Attempted</string>
    <string name="formattedTimeWithMinsSecs">%1$d mins %2$d secs</string>
    <string name="formattedTimeWithMinsOnly">%1$d mins</string>
    <string name="formattedTimeWithSecsOnly">%1$d secs</string>
    <string name="paste_your_quiz_id_here">Paste your Quiz Id here!</string>
    <string name="paste_here">Paste here</string>
    <string name="ques_title">Q%1$d. %2$s</string>
    <string name="zero">0</string>
    <string name="result">%1$d/%2$d</string>
    <string name="firstPlace">%1$dst</string>
    <string name="secondPlace">%1$dnd</string>
    <string name="thirdPlace">%1$drd</string>
    <string name="otherPlaces">%1$dth</string>
    <string name="you">(You)</string>
    <string name="dateAttempted">Date attempted: %1$s</string>
    <string name="timeUsed">Time Used: %1$s</string>
    <string name="quizDetails">Quiz Details</string>
    <string name="resultPage">Result</string>
    <string name="mistakes">Mistake(s)</string>
    <string name="createQuiz">Create Quiz</string>
    <string name="score">(%1$s)</string>
    <string name="your_mistake_s">Your mistake(s)…🤐</string>
    <string name="viewMistakes">View Your Mistakes</string>
    <string name="comfort">Do not give up! \n💪Practice makes perfect!💪</string>
    <string name="congrats">Congrats for getting full score! \n🥳Keep up the good job!🎉</string>
    <string name="selectCSVFile">Select a CSV file</string>
    <string name="installFileManager">Please install a file manager</string>
    <string name="quizAddedSuccessfully">Quiz added successfully!</string>
    <string name="welcomeBackTeacher">Welcome back, Teacher %1$s</string>
    <string name="welcomeTeacher">Welcome, Teacher %1$s</string>
    <string name="welcomeBackStudent">Welcome back, %1$s</string>
    <string name="welcomeStudent">Welcome back, %1$s</string>
    <string name="noRolesFound">No roles found in this account</string>
    <string name="passwordsMatch">Password and Confirm Password must match</string>
    <string name="validName">Enter a valid name</string>
    <string name="validEmail">Enter a valid email</string>
    <string name="validPassword">Enter a valid password</string>
    <string name="validCollegeID">Enter your valid college ID</string>
    <string name="suddenEndQuiz">You had ended the quiz suddenly. Your results are not saved</string>
    <string name="your_random_quiz_id">Your Random Quiz ID:</string>
    <string name="step_1_import_csv">Step 1: Import CSV</string>
    <string name="import_csv">Import CSV</string>
    <string name="step_2_enter_quiz_title">Step 2: Enter Quiz Title</string>
    <string name="quiz_titlee">Quiz Title</string>
    <string name="step_3_select_subject">Step 3: Select Subject</string>
    <string name="quiz_subjectt">Quiz Subject</string>
    <string name="login">LOGIN</string>
    <string name="sign_upp">Sign Up</string>
    <string name="those_who_forget_history_are_doomed_to_repeat_it_george_santayana">Those who forget history are doomed to repeat it 😌 ~ George Santayana</string>
    <string name="return_home">Return Home</string>
    <string name="_9">9</string>
    <string name="quesTitle">12. The cytoskeleton is important because</string>
    <string name="quesChoice">A. It gives the cell its shape</string>
    <string name="quiz_id">Quiz Id:</string>
    <string name="total_questions">Total questions:</string>
    <string name="total_time">Total time:</string>
    <string name="date_created">Date Created:</string>
    <string name="status">Status:</string>
    <string name="you_got">You got…</string>
    <string name="_16_20">16/20</string>
    <string name="ranks">Ranks</string>
    <string name="subject">Subject:</string>
    <string name="teacher_name">Teacher Name:</string>
    <string name="time_used">Time used:</string>
    <string name="date_attempted">Date attempted:</string>
    <string name="name">Name</string>
    <string name="student_id_staff_id">Student Id/ Staff Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_quizzes">New Quizzes</string>
    <string name="no_new_quizzes_yet_nstart_create_a_quiz_now">No new quizzes yet. \nStart create a quiz now!</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="text_view">Text View</string>
    <string name="you_did_not_answer_this_question">You did not answer this question…😞</string>
    <string name="history">History</string>
    <string name="copy_quiz_id">Copy Quiz ID</string>
    <string name="filter">Filter</string>
    <string name="your_have_not_attempted_any_quizzes_yet_nget_a_quiz_id_from_your_teacher_today">Your have not attempted any quizzes yet. \nGet a quiz Id from your teacher today!</string>
    <string name="english">English</string>
    <string name="score_16_20">Score: 16/20</string>
    <string name="home">Home</string>
    <string name="create_a_quiz">Create A Quiz</string>
</resources>