<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sky"
        android:orientation="vertical"
        tools:context=".ui.teacher.teacherHome.TeacherHomeFragment">

        <include
            android:id="@+id/navbar"
            layout="@layout/navbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/thirty_dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/forty_dp"
                android:fontFamily="@font/bold_redhatdisplay"
                android:minWidth="150dp"
                android:text="@string/create_a_quiz"
                android:textColor="@color/black"
                android:textSize="@dimen/eighteen_sp"
                app:backgroundTint="@color/green"
                app:cornerRadius="@dimen/ten_dp"
                app:icon="@drawable/ic_add_circle"
                app:iconTint="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="@dimen/one_dp" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_five_dp"
                android:background="@drawable/lavenderbg_with_border"
                android:padding="@dimen/fourteen_dp">

                <TextView
                    android:id="@+id/tvNewQuizzes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold_redhatdisplay"
                    android:text="@string/new_quizzes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twenty_sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNewQuizzes"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/thirty_five_dp" />

                <TextView
                    android:id="@+id/tvEmptyNewQuizzes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/mediumitalic_redhatdisplay"
                    android:gravity="center"
                    android:text="@string/no_new_quizzes_yet_nstart_create_a_quiz_now"
                    android:textSize="@dimen/fourteen_sp" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <include
                android:id="@+id/quizList"
                layout="@layout/layout_rvattemptedquizzes" />
        </LinearLayout>

    </LinearLayout>
</layout>