<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige"
        android:padding="@dimen/thirty_dp"
        tools:context=".ui.login_signup.login.LoginFragment">

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/forty_dp"
            android:fontFamily="@font/blackitalic_redhatdisplay"
            android:text="@string/quizzy"
            android:textColor="@color/coral"
            android:textSize="@dimen/fifty_five_sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:fontFamily="@font/bold_redhatdisplay"
            android:text="LOGIN"
            android:textColor="@color/black"
            android:textSize="@dimen/forty_sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_four_dp"
                android:background="@drawable/input_box"
                android:fontFamily="@font/bold_redhatdisplay"
                android:hint="@string/email"
                android:padding="@dimen/sixteen_dp"
                android:textSize="@dimen/eighteen_sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:background="@drawable/input_box"
                android:fontFamily="@font/bold_redhatdisplay"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/sixteen_dp"
                android:textSize="@dimen/eighteen_sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/thirty_dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/bold_redhatdisplay"
                android:minWidth="180dp"
                android:text="LOGIN"
                android:textColor="@color/black"
                android:textSize="@dimen/eighteen_sp"
                app:backgroundTint="@color/coral"
                app:cornerRadius="@dimen/twenty_five_dp" />

            <TextView
                android:id="@+id/tvSignUpNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/ten_dp"
                android:fontFamily="@font/bold_redhatdisplay"
                android:gravity="center"
                android:text="Sign Up"
                android:textSize="@dimen/eighteen_sp" />
        </RelativeLayout>
    </RelativeLayout>
</layout>